# dbx-project

./: .gitignore  README.md  databricks.yml  dbt_project.yml  justfile  profile_template.yml  pyproject.toml
databricks_workflows/: dbt_pipeline.json
dbt_profiles/: .user.yml  profiles.yml
pipelines/: core.job.yml  dbt_tasks.yml
scripts/: defaults.yml  generate_dependency_graph.py
src/macros/: auto_resolve_location.sql  custom_ref.sql  full_refresh_resolution.sql  logging.sql
src/models/bronze/source_1/: bronze.source_1.table_1.sql  table_1.sql
src/models/bronze/source_2/: bronze.source_2.table_1.sql  table_1.sql
src/models/silver/source_1/: silver.source_1.table_1.sql
