[project]
name = "dbx-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=17.0.1",
    "dbt-databricks>=1.10.4",
    "ipykernel>=6.29.5",
    "mypy>=1.17.0",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "ruff>=0.12.4",
    "tool>=0.8.0",
]
